src/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Total_Rating_Score__c  /  Total_feedback_record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalAttendee__c</fullName>
        <label>Total Attendee</label>
        <summaryForeignKey>Attendee__c.Session_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rating_Score__c</fullName>
        <label>Total Rating Score</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryFilterItems>
            <field>Feedback__c.Rating__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Feedback__c.Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_feedback_record__c</fullName>
        <label>Total feedback record</label>
        <summaryFilterItems>
            <field>Feedback__c.Rating__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Feedback__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Webinar_Link__c</fullName>
        <label>Webinar Link</label>
        <type>Url</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Session_Date__c</columns>
        <columns>Location__c</columns>
        <columns>Webinar_Link__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Average_Rating__c</columns>
        <columns>TotalAttendee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>With_Full_Detail</fullName>
        <columns>NAME</columns>
        <columns>Session_Date__c</columns>
        <columns>Location__c</columns>
        <columns>Webinar_Link__c</columns>
        <columns>Average_Rating__c</columns>
        <columns>TotalAttendee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>With Full Detail</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Seminar</fullName>
        <active>true</active>
        <label>Seminar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Session_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Session_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Session_Date__c</errorDisplayField>
        <errorMessage>Session Date can&apos;t be in Past</errorMessage>
    </validationRules>
</CustomObject>