src/objects/Training_Session__c/recordTypes/Already_attended.recordType-meta.xml
<RecordType>
    <fullName>Already_attended</fullName>
    <active>true</active>
    <label>Already attended</label>
</RecordType>