src/objects/Training_Session__c/validationRules/Session_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Session_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Session_Date__c</errorDisplayField>
    <errorMessage>Session Date can&apos;t be of future</errorMessage>
</ValidationRule>